# OOP2025LAB2

./: CMakeLists.txt  Four.cpp  Four.h  README.md  main.cpp  test_four.cpp
